--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,10 +1,8 @@
 .header-container {
   align-items: center;
   background-color: #ccc;
-  border-bottom: 2px solid black;
   display: flex;
   flex-flow: 'row wrap';
-  justify-content: flex-end;
-  width: 50%; }
+  justify-content: flex-end; }
   .header-container .header-link {
     margin: 15px; }
