--- a/src/css/home.sass
+++ b/src/css/home.sass
@@ -1,2 +1,10 @@
-.home-container
+.home
   height: 100vh
+
+  .home-container
+    align-items: center
+    display: flex
+    flex-flow: column
+    color: #eee
+    opacity: 0.8
+    width: 100%
